test/errors/undefined1.input.asm

* = $801
    jmp foo
foo2:
